# metamask_permit_cwv1

./: .gitignore  Cargo.toml  README.md
src/: funcs.rs  lib.rs  metamask.rs  structs.rs
src/pretty/: mod.rs
