[package]
name = "stashh-permit"
version = "0.10.0"
edition = "2021"
authors = ["bill wincer"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
cosmwasm-schema = { version = "1.2.6" }
serde = { version = "1.0.164", default-features = false, features = ["derive", "alloc"] }
ripemd = { version = "0.1.3", default-features = false }
schemars = "0.8.12"
bech32 = "0.9.1"
remain = "0.2.8"
secret-toolkit = { version = "0.10.0", default-features = false, features = ["crypto"] }
thiserror = "1.0"
sha3 = "0.10.8"

[dev-dependencies]
serde_derive = "1.0.80"
